- added `String.isGUID()` for validating GUIDs
- fixed live reload for `.ts` files
- added output log for the hostname of live reload
- improved live reload by sending a filename of changed file
- fixed internal stats
- improved middleware
- improved `F.use()` method
- added support for inline middleware for `ROUTE()` method in the form `ROUTE('GET / &middlewareA &middlewareB')`

========================
0.0.47
========================

- fixed unhandled error until destroying WebSocket
- added missing properties into the `UIStreamMessage`
- fixed parsing dates (lower than 1.1.1970) in the schemas
- fixed applying `filter` argument in the `BACKUP()` method
- improved bundle generator in the `$ total4` executable
- changed arguments position in the `controller.stream()` method
- improved `end` event in the FlowStream messages
- added `terminate` event to the FlowStream messages
- fixed `pause` state in the outputs in the FlowStream

========================
0.0.46
========================

- added `FILESTORAGE().backup(filename, callback)` method
- added `FILESTORAGE().restore(filename, callback)` method
- added `FILESTORAGE().stream(callback(file, next), [done])` for streaming of meta information for each file
- added `FILESTORAGE().move(id, newid, callback)` method
- added `MEMORIZE()` creates a simple and persistent storage
- improved `FAKE({ id: UID, name: 'string(30)' })` method by adding a support for inline schemas
- added a writing locks to the TextDB engine
- improved performance for `Array.wait()` + added canceling of processing (more in documentation)
- improved performance for `Array.async()` + added canceling of processing (more in documentation)
- fixed `protocol` parser for WebSocket routes
- fixed CSS variables
- added `schema.undefine(name)` for removing of defined field in the schema
- added `options.servicemode` to the start script for running Total.js app without HTTP server
- fixed error status codes